feat: add account and password cookie

--- a/door/src/styles/login.sass
+++ b/door/src/styles/login.sass
@@ -1,3 +1,4 @@
+$fontColor: #ffff
 *
     margin: 0
     padding: 0
@@ -64,6 +65,19 @@ body
                     background: #2148C0
                     color: #ffff
                     outline: none
+            .input-checkbox
+                display: flex
+                gap: 1rem
+                align-items: center
+                margin-top: 2rem
+                width: 20rem
+                .iuput-checkbox-label
+                    font-size: 1.5rem
+                    color: $fontColor
+                    font-weight: 10
+                input
+                    width: 1.5rem
+                    height: 1.5rem
             .login-btn
                 margin-top: 2rem
                 width: 20rem
